pcb almost done

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,27 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 367,
    "id": "48196ef1-cd23-4ccb-8095-5e454808d36e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pcbnew as pcb"
+    "import pcbnew as pcb\n",
+    "import re\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 368,
    "id": "f811d18d-0192-4b93-89ea-80f5157ef3c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = pcb.LoadBoard(\"keyboard.kicad_pcb\")"
+    "file = pcb.LoadBoard(\"keyboard-backup.kicad_pcb\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 369,
    "id": "6f074ce0-8cb8-4dfb-aad1-fdaf93c5de55",
    "metadata": {},
    "outputs": [],
@@ -32,254 +34,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "a8767323-e8c6-421d-9623-a9875ac107a7",
+   "execution_count": 370,
+   "id": "c7697138-5d80-4a6c-a8dc-f925ed2b6a28",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(707988000, 94654000)\n",
-      "(717988000, 94654000)\n",
-      "(692288000, 103874000)\n",
-      "(702288000, 103874000)\n",
-      "(676688000, 108484000)\n",
-      "(686688000, 108484000)\n",
-      "(645488000, 103874000)\n",
-      "(655488000, 103874000)\n",
-      "(668888000, 136144000)\n",
-      "(678888000, 136144000)\n",
-      "(653288000, 113094000)\n",
-      "(663288000, 113094000)\n",
-      "(645488000, 117704000)\n",
-      "(655488000, 117704000)\n",
-      "(637688000, 103874000)\n",
-      "(647688000, 103874000)\n",
-      "(653288000, 108484000)\n",
-      "(663288000, 108484000)\n",
-      "(661088000, 136144000)\n",
-      "(671088000, 136144000)\n",
-      "(684488000, 103874000)\n",
-      "(694488000, 103874000)\n",
-      "(637688000, 122314000)\n",
-      "(647688000, 122314000)\n",
-      "(676688000, 94654000)\n",
-      "(686688000, 94654000)\n",
-      "(645488000, 99264000)\n",
-      "(655488000, 99264000)\n",
-      "(676688000, 140754000)\n",
-      "(686688000, 140754000)\n",
-      "(653288000, 117704000)\n",
-      "(663288000, 117704000)\n",
-      "(700088000, 94654000)\n",
-      "(710088000, 94654000)\n",
-      "(661088000, 90044000)\n",
-      "(671088000, 90044000)\n",
-      "(692288000, 126924000)\n",
-      "(702288000, 126924000)\n",
-      "(661088000, 131534000)\n",
-      "(671088000, 131534000)\n",
-      "(676688000, 131534000)\n",
-      "(686688000, 131534000)\n",
-      "(637688000, 131534000)\n",
-      "(647688000, 131534000)\n",
-      "(653288000, 103874000)\n",
-      "(663288000, 103874000)\n",
-      "(645488000, 108484000)\n",
-      "(655488000, 108484000)\n",
-      "(637688000, 140754000)\n",
-      "(647688000, 140754000)\n",
-      "(668888000, 126924000)\n",
-      "(678888000, 126924000)\n",
-      "(637688000, 117704000)\n",
-      "(647688000, 117704000)\n",
-      "(668888000, 99264000)\n",
-      "(678888000, 99264000)\n",
-      "(684488000, 117704000)\n",
-      "(694488000, 117704000)\n",
-      "(653288000, 99264000)\n",
-      "(663288000, 99264000)\n",
-      "(676688000, 99264000)\n",
-      "(686688000, 99264000)\n",
-      "(653288000, 131534000)\n",
-      "(663288000, 131534000)\n",
-      "(668888000, 108484000)\n",
-      "(678888000, 108484000)\n",
-      "(692288000, 90044000)\n",
-      "(702288000, 90044000)\n",
-      "(676688000, 136144000)\n",
-      "(686688000, 136144000)\n",
-      "(684488000, 90044000)\n",
-      "(694488000, 90044000)\n",
-      "(661088000, 113094000)\n",
-      "(671088000, 113094000)\n",
-      "(707888000, 108484000)\n",
-      "(717888000, 108484000)\n",
-      "(723488000, 94654000)\n",
-      "(733488000, 94654000)\n",
-      "(692288000, 117704000)\n",
-      "(702288000, 117704000)\n",
-      "(668888000, 94654000)\n",
-      "(678888000, 94654000)\n",
-      "(676688000, 126924000)\n",
-      "(686688000, 126924000)\n",
-      "(684488000, 94654000)\n",
-      "(694488000, 94654000)\n",
-      "(700088000, 103874000)\n",
-      "(710088000, 103874000)\n",
-      "(645488000, 136144000)\n",
-      "(655488000, 136144000)\n",
-      "(676688000, 103874000)\n",
-      "(686688000, 103874000)\n",
-      "(723488000, 90044000)\n",
-      "(733488000, 90044000)\n",
-      "(668888000, 113094000)\n",
-      "(678888000, 113094000)\n",
-      "(637688000, 94654000)\n",
-      "(647688000, 94654000)\n",
-      "(653288000, 90044000)\n",
-      "(663288000, 90044000)\n",
-      "(684488000, 131534000)\n",
-      "(694488000, 131534000)\n",
-      "(645488000, 122314000)\n",
-      "(655488000, 122314000)\n",
-      "(684488000, 122314000)\n",
-      "(694488000, 122314000)\n",
-      "(661088000, 117704000)\n",
-      "(671088000, 117704000)\n",
-      "(700088000, 99264000)\n",
-      "(710088000, 99264000)\n",
-      "(668888000, 122314000)\n",
-      "(678888000, 122314000)\n",
-      "(676688000, 113094000)\n",
-      "(686688000, 113094000)\n",
-      "(668888000, 103874000)\n",
-      "(678888000, 103874000)\n",
-      "(700088000, 108484000)\n",
-      "(710088000, 108484000)\n",
-      "(684488000, 126924000)\n",
-      "(694488000, 126924000)\n",
-      "(668888000, 117704000)\n",
-      "(678888000, 117704000)\n",
-      "(700088000, 117704000)\n",
-      "(710088000, 117704000)\n",
-      "(692288000, 108484000)\n",
-      "(702288000, 108484000)\n",
-      "(684488000, 108484000)\n",
-      "(694488000, 108484000)\n",
-      "(637688000, 108484000)\n",
-      "(647688000, 108484000)\n",
-      "(637688000, 126924000)\n",
-      "(647688000, 126924000)\n",
-      "(645488000, 113094000)\n",
-      "(655488000, 113094000)\n",
-      "(653288000, 140754000)\n",
-      "(663288000, 140754000)\n",
-      "(637688000, 113094000)\n",
-      "(647688000, 113094000)\n",
-      "(715688000, 94654000)\n",
-      "(725688000, 94654000)\n",
-      "(661088000, 103874000)\n",
-      "(671088000, 103874000)\n",
-      "(645488000, 90044000)\n",
-      "(655488000, 90044000)\n",
-      "(637688000, 136144000)\n",
-      "(647688000, 136144000)\n",
-      "(645488000, 131534000)\n",
-      "(655488000, 131534000)\n",
-      "(668888000, 90044000)\n",
-      "(678888000, 90044000)\n",
-      "(715688000, 99264000)\n",
-      "(725688000, 99264000)\n",
-      "(661088000, 122314000)\n",
-      "(671088000, 122314000)\n",
-      "(684488000, 113094000)\n",
-      "(694488000, 113094000)\n",
-      "(692288000, 122314000)\n",
-      "(702288000, 122314000)\n",
-      "(707888000, 90044000)\n",
-      "(717888000, 90044000)\n",
-      "(684488000, 136144000)\n",
-      "(694488000, 136144000)\n",
-      "(676688000, 122314000)\n",
-      "(686688000, 122314000)\n",
-      "(637688000, 90044000)\n",
-      "(647688000, 90044000)\n",
-      "(676688000, 90044000)\n",
-      "(686688000, 90044000)\n",
-      "(645488000, 140754000)\n",
-      "(655488000, 140754000)\n",
-      "(668888000, 140754000)\n",
-      "(678888000, 140754000)\n",
-      "(715688000, 103874000)\n",
-      "(725688000, 103874000)\n",
-      "(715688000, 90044000)\n",
-      "(725688000, 90044000)\n",
-      "(653288000, 122314000)\n",
-      "(663288000, 122314000)\n",
-      "(707888000, 103874000)\n",
-      "(717888000, 103874000)\n",
-      "(692288000, 113094000)\n",
-      "(702288000, 113094000)\n",
-      "(676688000, 117704000)\n",
-      "(686688000, 117704000)\n",
-      "(692288000, 99264000)\n",
-      "(702288000, 99264000)\n",
-      "(661088000, 108484000)\n",
-      "(671088000, 108484000)\n",
-      "(700088000, 90044000)\n",
-      "(710088000, 90044000)\n",
-      "(661088000, 99264000)\n",
-      "(671088000, 99264000)\n",
-      "(707888000, 99264000)\n",
-      "(717888000, 99264000)\n",
-      "(668888000, 131534000)\n",
-      "(678888000, 131534000)\n",
-      "(653288000, 126924000)\n",
-      "(663288000, 126924000)\n",
-      "(637688000, 99264000)\n",
-      "(647688000, 99264000)\n",
-      "(645488000, 126924000)\n",
-      "(655488000, 126924000)\n",
-      "(661088000, 94654000)\n",
-      "(671088000, 94654000)\n",
-      "(692288000, 94654000)\n",
-      "(702288000, 94654000)\n",
-      "(653288000, 94654000)\n",
-      "(663288000, 94654000)\n",
-      "(661088000, 140754000)\n",
-      "(671088000, 140754000)\n",
-      "(684488000, 99264000)\n",
-      "(694488000, 99264000)\n",
-      "(653288000, 136144000)\n",
-      "(663288000, 136144000)\n",
-      "(707888000, 113094000)\n",
-      "(717888000, 113094000)\n",
-      "(700088000, 113094000)\n",
-      "(710088000, 113094000)\n",
-      "(645488000, 94654000)\n",
-      "(655488000, 94654000)\n",
-      "(661088000, 126924000)\n",
-      "(671088000, 126924000)\n",
-      "(293423000, 126864000)\n",
-      "(303423000, 126864000)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for footprint in board.GetFootprints():\n",
-    "    if(footprint.GetValue() == \"SK6812MINI\"):\n",
-    "        print(footprint.GetPosition())\n",
-    "        p = footprint.GetPosition()\n",
-    "        p.x = p.x + 10000000\n",
-    "        footprint.SetPosition(p)\n",
-    "        print(footprint.GetPosition())"
+    "footprints = filter(lambda el: el.GetReference(), board.GetFootprints())\n",
+    "bottomLayer =board.GetLayerID(\"F.Cu\")\n",
+    "nKeys = len(list(filter(lambda el: re.search(\"K\", el.GetReference()), board.GetFootprints())))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 371,
+   "id": "329bdfd4-9a26-4caf-a08b-13b0c0a793cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = pcb.FP_3DMODEL()\n",
+    "model.m_Filename = \"${KICAD6_3RD_PARTY}/3dmodels/com_github_perigoso_keyswitch-kicad-library/3d-library.3dshapes/SW_Cherry_MX_PCB.stp\"\n",
+    "offset = pcb.VECTOR3D()\n",
+    "offset.x = -2.5\n",
+    "offset.y = -5.1\n",
+    "model.m_Offset = offset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "id": "a8a26588-35b1-40fe-8128-9bf46b3fe1c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for nRef in range(nKeys):\n",
+    "    key   = list(filter(lambda el: el.GetReference() == f'K{nRef}',     board.GetFootprints()))[0]\n",
+    "    led   = list(filter(lambda el: el.GetReference() == f'D{nRef+200}', board.GetFootprints()))[0]\n",
+    "    diode = list(filter(lambda el: el.GetReference() == f'D{nRef}',     board.GetFootprints()))[0]\n",
+    "    \n",
+    "    ledPos = key.GetPosition()\n",
+    "    ledPos.x = ledPos.x - 2500000\n",
+    "    ledPos.y = ledPos.y + 10500000\n",
+    "\n",
+    "    diodePos = key.GetPosition()\n",
+    "    diodePos.x = diodePos.x - 6400000\n",
+    "    diodePos.y = diodePos.y - 1600000    \n",
+    "\n",
+    "    #led.\n",
+    "    led.SetPosition(ledPos)\n",
+    "    diode.SetPosition(diodePos)\n",
+    "    diode.Rotate(diode.GetPosition(), 1800.0)\n",
+    "    key.Add3DModel(model)\n",
+    "    key.Models\n",
+    "    #print(key.GetReference(), keyPos)\n",
+    "    #print(led.GetReference(), ledPos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
    "id": "47c4d092-5ac3-41e1-8b27-bf207f75f908",
    "metadata": {},
    "outputs": [
@@ -289,19 +102,19 @@
        "True"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pcb.SaveBoard(\"k.kicad_pcb\", board)"
+    "pcb.SaveBoard(\"keyboard.kicad_pcb\", board)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7697138-5d80-4a6c-a8dc-f925ed2b6a28",
+   "id": "fb75ccf6-22cb-48d3-b5c6-7466eead61a0",
    "metadata": {},
    "outputs": [],
    "source": []
